@@ -1,6 +1,10 @@
 1.4.dev
 -----------------
 
+- fix issue33 - commentchars are ignored in key-value settings allowing
+  for specifying commands like: python -c "import sys ; print sys"
+  which would formerly raise irritating errors because the ";"
+  was considered a comment
 - tweak and improve reporting
 - refactor reporting and virtualenv manipulation 
   to be more accessible from 3rd party tools
